objects/Hearing__c.object
<CustomObject>
    <description>Modify the Format Hearing Name Workflow to format the name to the Clients needs. 
Default is: Matter__r.litify_pm__Display_Name__c &amp; &quot; Hearing&quot; &amp; TEXT(Scheduled_Date__c)</description>
    <fields>
        <fullName>Court__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hearings (Court)</relationshipLabel>
        <relationshipName>HearingsCourt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposition_Deadline__c</fullName>
        <label>Deposition Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposition Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hearing_Notes__c</fullName>
        <label>Hearing Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Judge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Judge</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hearings</relationshipLabel>
        <relationshipName>Hearings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>litify_pm__Matter__c</referenceTo>
        <relationshipLabel>Hearings</relationshipLabel>
        <relationshipName>Hearings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <label>Hearing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hearing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hearings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>